syntax = "proto3";

package com.iclouding.mfs.rpc.namenode;

option java_multiple_files = true;
option java_package = "com.iclouding.mfs.rpc.namenode.service";
option java_outer_classname="NameNodeRpcServer";

//import "NameNodeRpcServerModel.proto";
import "NameNodeRpcModel.proto";

service NameNodeService{
  rpc register(RegisterRequest) returns (RegisterResponse);
  rpc heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
}